--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 <script type="text/javascript" src="/lib/js/socket.io.min.js"></script>
 <script src="https://apis.google.com/js/client.js?onload=gapiInit" async defer></script>
 
+
+<script type="text/javascript" src="/js/init.js"></script>
 <script type="text/javascript" src="/js/buttons.js"></script>
 <script type="text/javascript" src="/js/filetree.js"></script>
 <script type="text/javascript" src="/js/round.js"></script>
