--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,7 @@ The "debatesynergy.com" website is provided "as is", without warranty of any kin
                 <a target="_blank" href="http://getbootstrap.com/components/">Bootstrap</a>
                 <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Tutorials">Advanced</a>
                 <a target="_blank" href="https://github.com/gulakov/debatesynergy.com">Source</a>
+                <a target="_blank" href="https://github.com/gulakov/debatesynergy.com/issues">REPORT BUGS</a>
 
                 <textarea id="custom-js"  class="form-control" rows="7" placeholder="Insert javascript code to load custom plugins" ></textarea>
                 <textarea id="custom-css"  class="form-control"  rows="7" placeholder="Insert CSS to customize default styles" ></textarea>
