--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <script type="text/javascript" src="/round.js" async defer></script>
   <script type="text/javascript" src="/timer.js" ></script>
   <script type="text/javascript" src="/init.js" ></script>
+  <script> //if (typeof(u)=="undefined") location.pathname+="/"; //offline.html redirect when scripts are not loaded</script>
 </head>
 <body>
   <div id="sidebar">
@@ -101,7 +102,7 @@
 
       <h1> Manual </h1>
 
-      Sign in with Google to create your account and access your Google Drive files.
+      Sign in with Google to create your account and access your online research, synced with your Google Drive.
       <br> Basic formatting buttons: heading, <b>read</b>, <u>read card</u>, <u><span style="background-color: yellow;"> super read card</span></u>, remove formatting. These can be used on the text you copy from webpages or paste from Word documents. F1-F6
       keyboard shortcuts, also standards like Ctrl+B bold, Ctrl+U underline, Ctrl+Z undo, Ctrl+C copy, Ctrl+V paste, Ctrl+F search
       <br> Create new file button to make new files visible in the file tree, or import a file from Google Drive. Drop Word documents on to the browser to import them.
