--- a/public/index.html
+++ b/public/index.html
@@ -222,13 +222,15 @@
         </div>
         <div class="modal-body">
           <label>Debate Type:</label>
-          <label class="radio-inline">
-            <input type="radio" name="debatetype" class="debatetype" value="1"> Policy</label>
-          <label class="radio-inline">
-            <input type="radio" name="debatetype" class="debatetype" value="2"> LD</label>
+          <label class="radio-inline"><input type="radio" name="debatetype" class="debatetype" value="1"> Policy</label>
+          <label class="radio-inline"><input type="radio" name="debatetype" class="debatetype" value="2"> College Policy</label>
+          <label class="radio-inline"><input type="radio" name="debatetype" class="debatetype" value="2"> LD</label>
           <br>
-          <label>Team name:
-            <input id="teamname" class="form-control"> </label>
+
+
+          <label><h4>Team </h4></label>:
+          <input id="team-name" class="form-control" placeholder="Team name" />
+          <select id="team-users" type="text"></select>
 
 
 
