--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <!--Copyright (c) 2015 Alex Gulakov alexgulakov@gmail.com. The "debatesynergy.com" website is provided "as is", without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and noninfringement. -->
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="mobile.json">
   <base href="/">
 
   <title>Debate Synergy</title>
