--- a/public/index.html.old.html
+++ b/public/index.html.old.html
@@ -32,8 +32,6 @@
       <div class="form-search form-inline form-group-sm">
         <select id="searchtext" type="text"></select>
       </div>
-      
-      <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-transfer" id="showround" title="Round"></button>
       <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-header" id="block" title="Heading"></button>
       <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-bold" id="read" title="Bold"></button>
       <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-star-empty" id="readcard" title="Read text"></button>
@@ -41,11 +39,12 @@
       <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-align-justify" id="normal" title="Clear formatting"></button>
       <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-plus" id="file-new" title="New File"></button>
       <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-info-sign" id="showfileinfo" title="File Info &amp; Sharing"></button>
+      <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-transfer" id="showround" title="Round"></button>
       <button data-toggle="tooltip" data-placement="bottom" class="btn btn-default glyphicon glyphicon-cog" id="showsettings" title="Settings"></button>
 
 
       <div class="btn-group btn-group-xs">
-        <button type="button"  class="btn btn-default glyphicon glyphicon-option-horizontal" title="Embiggen" data-toggle="dropdown"  aria-expanded="false"></button>
+        <button type="button"  class="btn btn-default glyphicon glyphicon-option-horizontal" title="Formatting" data-toggle="dropdown"  aria-expanded="false"></button>
         <ul class="dropdown-menu">
 
             <li><a class="sm0">Default</a></li>
