--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 <head>
   <!--Copyright (c) 2015 Alex Gulakov alexgulakov@gmail.com. https://github.com/gulakov/debatesynergy.com -->
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
   <meta name="theme-color" content="#AACFE7">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <title>Debate Synergy</title>
   <base href="/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.min.css"/>
@@ -68,7 +71,7 @@
 
       <h1> Welcome to Debate Synergy</h1>
       <p>
-        Debatesynergy.com web app enables high school and college debate teams to store online research and stream debate rounds<br>
+        DebateSynergy.com open-source web app enables high school and college debate teams to store online research and stream debate rounds<br>
         <a onClick="window.open('http://www.wired.com/2012/01/ff_debateteam/')"  href="#" target="_blank">Featured in Wired magazine</a>. </p>
 
 
