early singularity ui

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <script src="/js/controlbuttons.js"></script>
   <script src="/js/sockets.js"></script>
   <script src="/js/roundpanel.js"></script>
+  <script src="/js/flow.js"></script>
   <script src="/js/timer.js"></script>
   <script src="/js/filetree.js"></script>
   <script src="/js/docedit.js"></script>
