--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
   <script src="user/index.js"></script>
 
-   <!-- <script src="ds.min.js"></script> -->
+   <!-- <script src="/min/ds.min.js"></script> -->
 
   <script src="/js/alerts.js"></script>
   <script src="/js/controlbuttons.js"></script>
