--- a/public/html/manual.html
+++ b/public/html/manual.html
@@ -7,8 +7,8 @@
   </style>
   <h1> Welcome to Debate Synergy</h1>
 <p>
-  DebateSynergy.com open-source web app enables high school and college debate teams to store online research and stream debate rounds<br>
-  <a onClick="window.open('http://www.wired.com/2012/01/ff_debateteam/')"  href="#" target="_blank">Featured in Wired magazine</a>. </p>
+  DebateSynergy.com enables debate students to store online research and stream debates.
+  <a onClick="window.open('http://www.wired.com/2012/01/ff_debateteam/')"  href="#" target="_blank">Featured in Wired</a>. </p>
 
 
 
@@ -22,19 +22,19 @@
   <li> New file + button to create a file or import from Google Drive. Import Word documents by dropping onto page.
   <li> Configure settings and create custom js/css plugins that enhance the interface for only you. Each user of a shared file applies their own styles.
   <li> Search all your files by headings or by full text.
-  <li> The file tree has extensive features: click to open file or go to heading, double click card to select and normalize font size, selects current block automatically as you scroll, collapsible file contents, and drag
-  and drop headings to rearrange them. Heading levels 1, 2, 3 are recognized automatically from document and tabbed.
-  <li> Use back / forward buttons in browser or on mouse (or Alt+Right/Left) to go to previously opened and next files in your docs.
+  <li> The file tree selects current block automatically as you scroll, enables click to open file or go to heading,  collapsible file contents, and drag
+  and drop headings to rearrange them. Heading levels 1, 2, 3 are recognized automatically from document.
+  <li> Use back / forward buttons in browser or on mouse to go to previously opened and next files in your docs.
   <li> Show the round tab to start rounds and see history. Invite the debaters and judges to join the round room. After sending out invites to other users by their registered email with Google sign-in, they must click the alert to accept.
   <li> Drag and drop from your docs to copy duplicate of selection into any of the speech tab titles or in a given position in current speech.
   <li> After your speech is ready, publish it for opponents to have it streamed to them up to the position that you have scrolled to, with live updating.
   <li> Make round panel full screen, or show speeches side-by-side so you can be creating your response speech while watching your opponents cards being live streamed.
+  <li> Insert flow entries inside your opponent's streamed speech, and use a flow entry to collapse speech sections or link to scroll to responses in next speech.
   <li> Toggle font sizes, to show either: normal font sizes, bold and underlined text larger, and bold and highlighted text larger.
   <li> The timer keeps track of prep and can be manually set.
   <li> <a onClick="window.open('https://chrome.google.com/webstore/detail/debate-synergy-15-timer/noecbaibfhbmpapofcdkgchfifmoinfj?hl=en')"  href="#" target="_blank">Debate Synergy Chrome extension</a> makes Debate Synergy always available.
-    <li> Easily share your files with the community and use short urls like debate.cards/prezpowers,  collaboration synergy across the debate community will be the maximum combined depth of research on the topic.
-    <li> Works well on Chrome / Firefox on laptop &amp; mobile. Mobile swipe to show/hide sidebar.
-  <li> Feature ideas? contact@debatesynergy.com alexgulakov@gmail.com
+    <li> Easily share your files, use short urls like debate.cards/prezpowers, to maximize in-depth knowledge on topics with collaborative research.
+    <li> Works well on Chrome / Firefox on laptop &amp; mobile, Windows/Linux/Android/Mac &#8984;. Mobile swipe to show/hide sidebar.
 </ul>
 
 <h1> Debate Sidebar Word AddIn </h1>
