--- a/public/html/interface.panels.html
+++ b/public/html/interface.panels.html
@@ -1,3 +1,93 @@
+
+  <aside id="round" style="display:none">
+    <div id="round-navbar">
+        <div id="round-controls">
+            <button id="speechscroll" title="Publish text as you scroll to opponents"  class="icon-eye"></button>
+            <button id="font-big" title="Embiggen Read Text" class="icon-font"></button>
+            <button id="speech-flow-mode" class="icon-edit" title="Flow-Only Mode"></button>
+
+            <div class="dropdown">
+              <button title="Page Mode"></button>
+              <div class="dropdown-menu">
+
+                 <button id="fullscreen" class="icon-arrows-alt"> View: Full Screen</button>
+                 <button  id="sidebyside" class="icon-speech-side-by-side" >View: Speech Side-by-Side</button>
+                 <button  id="font-flow" class="icon-text-compress"> Collapse Flow Items</button>
+              </div>
+            </div>
+
+
+
+
+        </div>
+
+      <div id="speech-nav-container">
+
+        <div class="speech-nav speech-nav-neg active-nav" id="speechmain-nav">Main</div>
+        <div class="speech-nav speech-nav-aff" id="speech1AC-nav">1AC</div>
+        <div class="speech-nav speech-nav-neg" id="speech1NC-nav">1NC</div>
+        <div class="speech-nav speech-nav-aff" id="speech2AC-nav">2AC</div>
+        <div class="speech-nav speech-nav-neg" id="speech2NC-nav">2NC</div>
+        <div class="speech-nav speech-nav-neg" id="speech1NR-nav">1NR</div>
+        <div class="speech-nav speech-nav-aff" id="speech1AR-nav">1AR</div>
+        <div class="speech-nav speech-nav-neg" id="speech2NR-nav">2NR</div>
+        <div class="speech-nav speech-nav-aff" id="speech2AR-nav">2AR</div>
+      </div>
+
+
+      <time id="timer">
+        <input id="count" maxlength="5" />
+        <div id="timer-btn-container">
+          <div id="btn-prep-container">
+            <div id="btn-timer-aff"></div>
+            <div id="btn-timer-neg"></div>
+          </div>
+          <div id="btn-play-container">
+            <div id="btn-play" class="play"></div>
+          </div>
+          <div id="btn-times-container">
+            <div id="btn-timer-constructive"></div>
+            <div id="btn-timer-rebuttal"></div>
+            <div id="btn-timer-crossx"></div>
+          </div>
+        </div>
+      </time>
+
+    </div>
+
+
+    <div id="round-content">
+
+      <div class="speechmain active-speech" id="speechmain">
+
+        <select multiple id="judges" class="username-select" data-placeholder="Judge emails or names"></select>
+        <select id="aff1" class="username-select" data-placeholder="1A email or name"></select>
+        <select id="aff2" class="username-select" data-placeholder="2A email or name"></select>
+
+        <select id="neg1" class="username-select" data-placeholder="1N email or name"></select>
+        <select id="neg2" class="username-select" data-placeholder="2N email or name"></select>
+
+
+        <button id="roundcreate" type="submit">Invite</button>
+
+        <div id="pastrounds"></div>
+
+        <div id="drag-copy"></div>
+
+      </div>
+
+      <article contenteditable class="speech" id="speech1AC"></article>
+      <article contenteditable class="speech" id="speech1NC"></article>
+      <article contenteditable class="speech" id="speech2AC"></article>
+      <article contenteditable class="speech" id="speech2NC"></article>
+      <article contenteditable class="speech" id="speech1NR"></article>
+      <article contenteditable class="speech" id="speech1AR"></article>
+      <article contenteditable class="speech" id="speech2NR"></article>
+      <article contenteditable class="speech" id="speech2AR"></article>
+
+    </div>
+  </aside>
+
 <footer>
 
   <div id="settings" class="modal">
