--- a/public/html/index.html
+++ b/public/html/index.html
@@ -21,9 +21,11 @@
     <script src="js/controlsettings.js"></script>
     <script src="js/sockets.js"></script>
     <script src="js/roundpanel.js"></script>
-    <script src="js/flow.js"></script>
+    <script src="js/roundaction.js"></script>
+    <script src="js/roundflow.js"></script>
     <script src="js/timer.js"></script>
     <script src="js/filetree.js"></script>
+    <script src="js/docopen.js"></script>
     <script src="js/docedit.js"></script>
     <script src="js/search.js"></script>
     <script src="js/offline.js"></script>
