--- a/public/html/index.mobile.html
+++ b/public/html/index.mobile.html
@@ -1,3 +1,4 @@
+<!-- NEEDS UPDATE TO PARTIAL ONLY -->
 <!DOCTYPE html><html><head>
   <title>Debate Synergy</title>
   <meta name="description" content="DebateSynergy.com enables debate students to store online research and stream debates. Developed by Alex Gulakov 2010-2017 alexgulakov@gmail.com, CC BY-SA 4.0">
