--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/flow.css" />
     <link rel="stylesheet" href="/css/roundpanel.css" />
     <link rel="stylesheet" href="/css/timer.css" />
-    <link rel="stylesheet" href="/css/debate-icons.css" />
+    <link rel="stylesheet" href="/css/icon/debate-icons.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.full.min.js"></script>
